welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:9: error: not found: value transitionLigne
  transitionLigne()
  ^FlowerCase:11: error: not found: value transitionColonne
  transitionColonne()
  ^FlowerCase:23: error: not found: value transitionLigne
  transitionLigne()
  ^FlowerCase:37: error: not found: value growflowers1
growflowers1()
^